--- a/yogurt/package.json
+++ b/yogurt/package.json
@@ -6,14 +6,17 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "cra-template": "1.2.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.13.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
